see #237 finalized UI, localization, Manual and changes

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -19,14 +19,12 @@
     "5": "5",
     "6": "6",
     "<div style=": "<div style=",
-    "<span id=": "<span id=",
     "A3": "A3",
     "a3_offset": "Offset für A3",
     "A4": "A4",
     "a4_offset": "Offset für A4",
     "a4_pages": "Seiten bei A4",
     "abc standard 2.2": "abc standard 2.2",
-    "abc Tutorial concise": "ABC Tutorial kompakt",
     "abc Tutorial detail": "ABC Tutorial ausführlich",
     "abc Tutorial": "ABC - Einführung",
     "abc": "ABC-Notation",
@@ -38,7 +36,6 @@
     "Add a predefined annotation": "Referenz auf Bechriftungsvorlage hinzufügen",
     "Add a shift": "Note rechts/links schieben",
     "Add an annotation": "Notenbeschriftung  hinzufügen",
-    "Add Config": "Konfig. einfügen",
     "Add missing entries": "Fehlende Einträge einfügen",
     "after_colon_1": "after_colon_1",
     "after_colon_n": "after_colon_n",
@@ -46,22 +43,30 @@
     "afterColon1": "afterColon1",
     "afterColonN": "afterColonN",
     "afterComma": "afterComma",
+    "align": "Ausrichtung",
     "aligned": "aligned",
     "all parameters": "Alle Parameter",
     "All": "Alle Fenster",
     "Ambiguous file number": "Dateinummer ist mehrdeutigr",
+    "anchor_at_box": "Rand: ab Notenrand",
+    "anchor_at_center": "Mitte: ab Notenmitte",
     "Annotation": "Notenbeschriftung",
     "annotation": "Notenbeschriftung",
     "AnnotationRef": "Ref. Notenbeschriftung",
     "annotations too close [": "Beschriftungen zu dicht beianander [",
     "annotations": "Notenbeschriftungsvorlagen",
+    "apanchor": "autom. pos. Anker",
     "apbase": "autom. pos. Basis",
     "autopos": "autom. pos.",
     "autoscroll": "zur Selektion scrollen",
     "bad characters in filename": "Fehlerhafte Zeichen im Filenamen",
+    "barnumber left": "Taktnummer links",
+    "barnumber right": "Taktnummer rechts",
+    "barnumber": "Taktnummer",
     "barnumbers and countnotes": "Taktnummer und Zählmarken",
     "barnumbers": "Taktnummern",
     "barnumbers.full": "Taktnummern.detail",
+    "barnumbers_countnotes": "Taktnummer und Zählmarken",
     "basic settings": "Grundeinstellungen",
     "beams": "Notenhälse",
     "BEAT_PER_DURATION": "**--BEAT_PER_DURATION",
@@ -88,6 +93,8 @@
     "console": "Konsole",
     "could not find extract with number": "Es gibt keinen Auszug mit nummer",
     "could not open file": "konnte Datei nicht öffnen",
+    "countnote left": "Zählmarke links",
+    "countnote right": "Zählmarke rechts",
     "countnote": "Zählmarke",
     "countnotes": "Zählmarken",
     "cp1": "cp1",
