see #242 now use menus in the statusbar instead of of toggle / cycle

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -19,7 +19,9 @@
     "5": "5",
     "6": "6",
     "<div style=": "<div style=",
+    ">_": ">_",
     "A3": "A3",
+    "A3-A4": "A3-A4",
     "a3_offset": "Offset für A3",
     "A4": "A4",
     "a4_offset": "Offset für A4",
@@ -37,6 +39,9 @@
     "Add a shift": "Note rechts/links schieben",
     "Add an annotation": "Notenbeschriftung  hinzufügen",
     "Add missing entries": "Fehlende Einträge einfügen",
+    "adjust automatic rendering": "Automatisches Rendern einstellen",
+    "adjust logelevel": "Loglevel einstellen",
+    "adjust play speed": "Wiedergabegeschwindigkeit einstellen",
     "after_colon_1": "after_colon_1",
     "after_colon_n": "after_colon_n",
     "after_comma": "after_comma",
@@ -47,9 +52,10 @@
     "aligned": "aligned",
     "all parameters": "Alle Parameter",
     "All": "Alle Fenster",
+    "already read": "bereits gelesen",
     "Ambiguous file number": "Dateinummer ist mehrdeutigr",
-    "anchor_at_box": "Rand: ab Notenrand",
-    "anchor_at_center": "Mitte: ab Notenmitte",
+    "anchor_at_box": "am Rand der Note verankern",
+    "anchor_at_center": "an der Mitte der Note verankern",
     "Annotation": "Notenbeschriftung",
     "annotation": "Notenbeschriftung",
     "AnnotationRef": "Ref. Notenbeschriftung",
@@ -57,6 +63,10 @@
     "annotations": "Notenbeschriftungsvorlagen",
     "apanchor": "autom. pos. Anker",
     "apbase": "autom. pos. Basis",
+    "Auto Refresh": "Auto-Rendern ",
+    "Auto Render off": "Auto-Rendern off",
+    "Auto Render on ": "Auto-Rendern on",
+    "Auto-Render ": "Auto-Rendern ",
     "autopos": "autom. pos.",
     "autoscroll": "zur Selektion scrollen",
     "bad characters in filename": "Fehlerhafte Zeichen im Filenamen",
@@ -261,6 +271,7 @@
     "loglevel error": "Loglevel Fehler",
     "loglevel info": "Loglevel Info",
     "loglevel warning": "Loglevel Warnung",
+    "Loglevel": "Loglevel",
     "Logout from Dropbox": "bei Dropbox ausloggen",
     "Logout": "Ausloggen",
     "lyrics": "Liedtexte",
@@ -378,11 +389,13 @@
     "saitenspiel": "Saitenspiel",
     "Save ABC file in dropbox": "ABC-File in Dropbox speichern",
     "Save": "Speichern",
+    "saveformat": "Seitenformat für pdf",
     "Select in all voices": "Abschnitt in allen Stimmen auswählen",
     "select the current notes in all voices": "selektierten Zeitraum in allen Stimmen selektieren",
     "set screen perspective": "Bildschirmansicht wählen",
     "settemplate": "Vorlage aktivieren",
     "settings for specific instrument sizes": "Instrument spezifischen Einstellungen",
+    "setup output page format": "Seitenformat für pdf auswählen",
     "shape": "Linienform",
     "shift left": "links schieben",
     "shift right": "rechts schieben",
@@ -457,6 +470,7 @@
     "There is no file with this id": "Es gibt keine Datei mit der Nummer",
     "title": "Titel",
     "Title": "Titel",
+    "Toggle console": "Konsole ein/ausschalten",
     "trpos": "oben rechts",
     "Tune": "Noten",
     "tuplet": "n-Tole",
