compiled for deploy

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -368,7 +368,7 @@
     "push to extract 0": "nach Auszug 0 schieben",
     "Quick Setting": "Schnelleinst.",
     "read later": "später lesen",
-    "read now": "jetzt lesen",
+    "read now": "Informationen jetzt lesen!",
     "redo": "wiederherstellen",
     "Reference": "Referenz",
     "Refresh": "Refresh",
