Support for Zipino instrument #250
first step

--- a/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
+++ b/30_sources/SRC_Zupfnoter/src/localization/zupfnoter_de-de.json
@@ -66,6 +66,7 @@
     "Auto Refresh": "Auto-Rendern ",
     "Auto Render off": "Auto-Rendern off",
     "Auto Render on ": "Auto-Rendern on",
+    "Auto Render": "Auto Render",
     "Auto-Render ": "Auto-Rendern ",
     "autopos": "autom. pos.",
     "autoscroll": "zur Selektion scrollen",
@@ -508,6 +509,7 @@
     "you have multiple %%score statements": "Du hast mehr als eine %%score Zeile",
     "you need to logout if you want to change the application scope": "Du musst dich abmelden um den Zugriffstyp zu ändern",
     "your cursor is not within a voice": "dein Cursor steht nicht in einer Stimme. Daher kann die Selektion nicht auf andere Stimmen übertragen werden",
+    "Zipino": "Zipino",
     "Zombie Accesstoken revoked; do not use Browser back after login to dropbox": "Zombie Zugriffstoken gelöscht. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "Zombie token or zombie login occured. Maybe you hit the back button in the browser.": "Zombie Zugriffstoken oder login aufgetreten. Bitte drücke nicht die ZURÜCK-Taste des Borwsers nach dem Einloggen in Dropbox.",
     "zoom harpnote preview": "Zoom in Vorschau der Harfennoten",
